--- a/source_code/templates/login.html
+++ b/source_code/templates/login.html
@@ -1,5 +1,5 @@
 <form action='/logged' method="POST"> 
-Login: <input type='text' name='email' required><br>
+Email: <input type='text' name='email' required><br>
 Hasło: <input type='password' name='pass' required><br>
 <input type='submit' value='Zaloguj'>
 </form>
