--- a/source_code/templates/index.html
+++ b/source_code/templates/index.html
@@ -1,5 +1,25 @@
-<h1>Hello world</h1>
-<h3> You are on index site </h3>
-<p> Welcome to Akademia Programowania </p>
-<button><a href='login'>Zaloguj</a></button>
-<button><a href='register'>Zarejestruj się</a></button>
+<!DOCTYPE HTML>
+<html lang="pl">
+<head>
+	<meta charset="utf-8" />
+	<title>Akademia programowania</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css')}}">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:900i&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+            <h1 class="title">Akademia programowania</h1>
+            <nav class="navbar">
+                <a class="nav_item" href='login'>Zaloguj</a>
+                <a class="nav_item" href='register'>Zarejestruj się</a>
+            </nav>
+    </header>
+    <main>
+        <div class="content">
+
+        </div>
+    </main> 
+    
+</body>
