--- a/source_code/static/css/index.css
+++ b/source_code/static/css/index.css
@@ -17,12 +17,12 @@ body {
 }
 header {
     background-color: #333333;
-    
     display: flex;
     justify-content: space-around;
     align-items: center;
     position: sticky;
     top: 0;
+    min-height: 120px;
 }
 .navbar {
     padding-top: 30px;
@@ -46,15 +46,17 @@ main {
     padding: 0;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .content {
     min-width: 500px;
+    max-width: 800px;
     margin:50px;
     background: #eee;
-    height: 200px;
     border-radius: 10px;
+    color: black;
 }
-.content .login {
+.content form {
     padding: 50px 0 50px 0;
     margin-left: auto;
     margin-right: auto;
@@ -62,23 +64,72 @@ main {
     flex-direction: column;
     
 }
-.content .login div {
+.content form div {
     display: flex;
     justify-content: center;
 }
-.content .login input[type="submit"] {
+.content form input[type="submit"] {
     width: 100px;
 }
-.content .login label {
+.content form label {
     padding: 10px 30px 10px 30px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.content .login input {
+.content form input {
     margin: 0 10px 0 10px;
 }
 .content p {
     color: black;
     display: block;
+}
+.nav_menu Menu{
+    padding: 10px 10px 10px 10px;
+    color: white;
+}
+.nav_menu
+{
+    padding: 10px 10px 10px 10px;
+}
+.nav_menu:hover{
+    background-color: #660033;
+}
+
+.sidenav {
+    height: 100%;
+    max-width: 240px;
+    min-width: 200px;
+    position: fixed;
+    z-index: 1; 
+    top: 120px;
+    background: #660033;
+}
+.sidebutton {
+    display: flex;width:100%;
+    min-height:40px;
+    max-width:200px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin: 0 0 0 0;
+    vertical-align: middle;
+    color:white;
+    justify-content: center;
+    align-items: center;
+    border-bottom-style: dotted;
+    border-color:white;
+    border-width:1px;
+    font-family: 'Source Code Pro', monospace;
+    font-weight: 200;
+    
+}
+.sidebutton:hover {
+    background: #461414;
+    border-radius: 5px;
+    cursor: pointer;
+    border-left-style: solid;
+    border-left-width: 3px;
+    border-radius:0;
+    font-weight: 600;
+    border-radius: 4px;
 }
