--- a/source_code/templates/index.html
+++ b/source_code/templates/index.html
@@ -16,7 +16,7 @@
                 <a class="nav_item" href='register'>Zarejestruj się</a>
             </nav>
     </header>
-    <main>
+    <main class="align">
         <div class="content">
 
         </div>
