--- a/source_code/templates/login.html
+++ b/source_code/templates/login.html
@@ -15,7 +15,7 @@
                 <a class="nav_item" href='/'>Powrót</a>
             </nav>
     </header>
-    <main>
+    <main class="align">
         <div class="content">
                 <form  action='/logged' method="POST"> 
                     <label><p>Email:</p> <input type='text' name='email' required></label>
