--- a/source_code/templates/register.html
+++ b/source_code/templates/register.html
@@ -15,7 +15,7 @@
                 <a class="nav_item" href='/'>Powrót</a>
             </nav>
     </header>
-    <main>
+    <main class="align">
         <div class="content">
             <form action='/registered' method="POST"> 
                 <label>First name: <input type='text' name='fname' required></label>
