change html and css

--- a/source_code/static/css/index.css
+++ b/source_code/static/css/index.css
@@ -39,23 +39,18 @@ main {
     rgba(165, 12, 38, 0.589) 100% ), url("../img/background.jpg");
     background-position: bottom;
     background-size: cover;
-    /*height: 100vh;*/
     min-height: 550px;
-    /*max-height: 650px;*/
     margin: 0;
     padding: 0;
-    display: flex;
-    /*justify-content: center;*/
-    /*align-items: center;*/
+
 }
-.align {
-    justify-content: center;
-    align-items: center;
+main .container {
+    display: flex;
 }
 .content {
     min-width: 500px;
     max-width: 800px;
-    margin:50px;
+    margin:50px auto 50px auto;
     background: #eee;
     border-radius: 10px;
     color: black;
@@ -101,31 +96,24 @@ main {
 }
 
 .sidenav {
-    /*height: 100%;*/
-    /*max-width: 240px;*/
-    min-width: 120px;
-    /*position: fixed;*/
-    /*z-index: 1;*/ 
-    /*top: 120px;*/
+    min-width: 150px;
     background: #660033;
-    margin-top: 10px;
+    margin-top: 5px;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 10px 50px 10px;
 }
 .sidebutton {
     display: flex;
     width:100%;
     min-height:40px;
     max-width:200px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin: 0 0 0 0;
-    vertical-align: middle;
+    margin: 0;
     color:white;
     justify-content: center;
     align-items: center;
-    border-bottom-style: dotted;
-    border-color:white;
-    border-width:1px;
     font-family: 'Source Code Pro', monospace;
     font-weight: 200;
     
