--- a/source_code/templates/base.html
+++ b/source_code/templates/base.html
@@ -20,22 +20,26 @@
     </header>
    
     <main>
-        <div class="sidenav">
-            <div class="sidebutton">
-                <a href="/news">Aktualności</a>
+        <div class="container">
+            <aside>
+                <div class="sidenav">
+                    <div class="sidebutton">
+                        <a href="/news">Aktualności</a>
+                    </div>
+                    <div class="sidebutton">
+                        <a href="/courses">Kursy</a>
+                    </div>
+                    <div class="sidebutton">
+                        <a href="/groups">Grupy</a>
+                    </div>
+                    <div class="sidebutton">
+                        <a href="/grades">Oceny</a>
+                    </div>
+                </div>
+            </aside>
+            <div class="content">
+                {% block content %}{% endblock %}
             </div>
-            <div class="sidebutton">
-                <a href="/courses">Kursy</a>
-            </div>
-            <div class="sidebutton">
-                <a href="/groups">Grupy</a>
-            </div>
-            <div class="sidebutton">
-                <a href="/grades">Oceny</a>
-            </div>
-        </div>
-        <div class="content">
-               {% block content %}{% endblock %}
         </div>
     </main> 
     
