--- a/source_code/templates/index.html
+++ b/source_code/templates/index.html
@@ -16,9 +16,11 @@
                 <a class="nav_item" href='register'>Zarejestruj się</a>
             </nav>
     </header>
-    <main class="align">
-        <div class="content">
+    <main>
+        <div class="container">
+            <div class="content">
 
+            </div>
         </div>
     </main> 
     
