--- a/source_code/templates/login.html
+++ b/source_code/templates/login.html
@@ -15,13 +15,15 @@
                 <a class="nav_item" href='/'>Powrót</a>
             </nav>
     </header>
-    <main class="align">
-        <div class="content">
-                <form  action='/logged' method="POST"> 
-                    <label><p>Email:</p> <input type='text' name='email' required></label>
-                    <label><p>Hasło:</p> <input type='password' name='pass' required></label>
-                    <div><input type='submit' value='Zaloguj'></div>
-                </form>
+    <main>
+        <div class="container">
+            <div class="content">
+                    <form  action='/logged' method="POST"> 
+                        <label><p>Email:</p> <input type='text' name='email' required></label>
+                        <label><p>Hasło:</p> <input type='password' name='pass' required></label>
+                        <div><input type='submit' value='Zaloguj'></div>
+                    </form>
+            </div>
         </div>
     </main> 
     
