--- a/source_code/templates/register.html
+++ b/source_code/templates/register.html
@@ -15,16 +15,18 @@
                 <a class="nav_item" href='/'>Powrót</a>
             </nav>
     </header>
-    <main class="align">
-        <div class="content">
-            <form action='/registered' method="POST"> 
-                <label>First name: <input type='text' name='fname' required></label>
-                <label>Last name: <input type='text' name='lname' required></label>
-                <label>Email: <input type='email' name='email' required></label>
-                <label>Password: <input type='password' name='password' required></label>
-                <label><input type="checkbox" required> Akceptuje regulamin</label>
-                <div><input type='submit' value='Submit'></div>
-                </form> 
+    <main>
+        <div class="container">
+            <div class="content">
+                <form action='/registered' method="POST"> 
+                    <label>First name: <input type='text' name='fname' required></label>
+                    <label>Last name: <input type='text' name='lname' required></label>
+                    <label>Email: <input type='email' name='email' required></label>
+                    <label>Password: <input type='password' name='password' required></label>
+                    <label><input type="checkbox" required> Akceptuje regulamin</label>
+                    <div><input type='submit' value='Submit'></div>
+                    </form> 
+            </div>
         </div>
     </main> 
     
