add hamburger menu

--- a/source_code/templates/login.html
+++ b/source_code/templates/login.html
@@ -26,6 +26,7 @@
             </div>
         </div>
     </main> 
-    
+<footer><p>© 2019 Akademia programowania</p></footer>     
 </body>
+</html>
 
