--- a/source_code/templates/register.html
+++ b/source_code/templates/register.html
@@ -29,6 +29,6 @@
             </div>
         </div>
     </main> 
-    
+<footer><p>© 2019 Akademia programowania</p></footer>     
 </body>
-
+</html>
