--- a/source_code/static/css/index.css
+++ b/source_code/static/css/index.css
@@ -16,7 +16,7 @@ body {
     font-size: 50px;
 }
 header {
-    background-color: #333333;
+    background-color: #333333;#333333;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -24,8 +24,39 @@ header {
     top: 0;
     min-height: 120px;
 }
+.fa-bars {
+    color: white;
+    font-size: 30px;
+}
+.fa-bars:hover {
+    cursor: pointer;
+}
+footer {
+    background-color: #333333;
+}
+footer p {
+    color: white;
+    padding: 10px;
+    margin: 0 auto;
+    text-align: center;
+}
+.menu_items {
+    position: absolute;
+    background-color: #333333;
+    list-style-type: none;
+    margin: 0;
+    padding: 20px;
+    text-align: center;
+}
+.menu_items .item {
+    padding: 5px 30px;
+}
+.menu_items .item:hover {
+    background-color: #660033;
+}
 .navbar {
     padding-top: 30px;
+    
 }
 .nav_item {
     padding: 10px 10px 10px 10px;
@@ -83,14 +114,7 @@ main .container {
     color: black;
     display: block;
 }
-.nav_menu Menu{
-    padding: 10px 10px 10px 10px;
-    color: white;
-}
-.nav_menu
-{
-    padding: 10px 10px 10px 10px;
-}
+
 .nav_menu:hover{
     background-color: #660033;
 }
