--- a/source_code/templates/base.html
+++ b/source_code/templates/base.html
@@ -7,6 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css')}}">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:900i&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -42,5 +43,8 @@
             </div>
         </div>
     </main> 
-    
+<footer><p>© 2019 Akademia programowania</p></footer>    
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>    
+<script type="text/javascript" src="{{ url_for('static', filename='script.js') }}"></script>     
 </body>
+</html>
