--- a/source_code/templates/register.html
+++ b/source_code/templates/register.html
@@ -1,34 +1,14 @@
-<!DOCTYPE HTML>
-<html lang="pl">
-<head>
-	<meta charset="utf-8" />
-	<title>Akademia programowania</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css')}}">
-    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:900i&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header>
-            <h1 class="title">Akademia programowania</h1>
-            <nav class="navbar">
-                <a class="nav_item" href='/'>Powrót</a>
-            </nav>
-    </header>
-    <main>
-        <div class="container">
-            <div class="content">
-                <form action='/registered' method="POST"> 
-                    <label>First name: <input type='text' name='fname' required></label>
-                    <label>Last name: <input type='text' name='lname' required></label>
-                    <label>Email: <input type='email' name='email' required></label>
-                    <label>Password: <input type='password' name='password' required></label>
-                    <label><input type="checkbox" required> Akceptuje regulamin</label>
-                    <div><input type='submit' value='Submit'></div>
-                    </form> 
-            </div>
-        </div>
-    </main> 
-<footer><p>© 2019 Akademia programowania</p></footer>     
-</body>
-</html>
+{% extends "index.html" %}
+{% block nav %}
+<a class="nav_item" href='/'>Powrót</a>
+{% endblock %}
+{% block form %}
+<form action='/registered' method="POST"> 
+    <label>First name: <input type='text' name='fname' required></label>
+    <label>Last name: <input type='text' name='lname' required></label>
+    <label>Email: <input type='email' name='email' required></label>
+    <label>Password: <input type='password' name='password' required></label>
+    <label><input type="checkbox" required> Akceptuje regulamin</label>
+    <div><input type='submit' value='Submit'></div>
+</form>
+{% endblock%}
