--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,7 +3,7 @@
 <a class="nav_item" href='/'>Powrót</a>
 {% endblock %}
 {% block form %}
-<form action='/registered' method="POST"> 
+<form action='/register/' method="POST"> 
     <label>First name: <input type='text' name='fname' required></label>
     <label>Last name: <input type='text' name='lname' required></label>
     <label>Email: <input type='email' name='email' required></label>
