--- a/app/templates/slogged.html
+++ b/app/templates/slogged.html
@@ -2,11 +2,11 @@
 
 {% block nav %}
     <nav class="navbar_log">
-        <a class="nav_menu" href='/logged'>{{firstName}} {{lastName}}</a>
+        <a class="nav_menu" href='/slogged'>{{firstName}} {{lastName}}</a>
         <i class="fas fa-bars"></i>
         <ul class='menu_items' style="display: none;">
-            <li class='item'><a href='/'>Mój profil</a></li>
-            <li class='item'><a href='/logged'>Wyloguj</a></li>
+            <li class='item'><a href='/slogged'>Mój profil</a></li>
+            <li class='item'><a href='/'>Wyloguj</a></li>
         </ul>
     </nav>
 {% endblock %}
