--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,7 +3,7 @@
 <a class="nav_item" href='/'>Powrót</a>
 {% endblock %}
 {% block form %}
-<form  action='/logged' method="POST"> 
+<form  action='/login/' method="POST"> 
     <label><p>Email:</p> <input type='text' name='email' required></label>
     <label><p>Hasło:</p> <input type='password' name='pass' required></label>
     <div><input type='submit' value='Zaloguj'></div>
