--- a/app/templates/admin_view.html
+++ b/app/templates/admin_view.html
@@ -2,10 +2,10 @@
 
 {% block nav %}
     <nav class="navbar_log">
-        <a class="nav_menu" href='/userview'>ADMIN {{firstName}} {{lastName}}</a>
+        <a class="nav_menu" href='/admin'>ADMIN {{firstName}} {{lastName}}</a>
         <i class="fas fa-bars"></i>
         <ul class='menu_items' style="display: none;">
-            <li class='item'><a href='/userview'>Mój profil</a></li>
+            <li class='item'><a href='/admin'>Mój profil</a></li>
             <li class='item'><a href='/logout'>Wyloguj</a></li>
         </ul>
     </nav>
