Repairs in database SQL, database class, models, views

--- a/app/templates/teacher_view.html
+++ b/app/templates/teacher_view.html
@@ -18,7 +18,7 @@
         <a href="/courses">Kursy</a>
     </div>
     <div class="sidebutton">
-        <a href="/ygroups">Twoje grupy</a>
+        <a href="/groups">Twoje grupy</a>
     </div>
     <div class="sidebutton">
         <a href="/grades">Obecności</a>
