--- a/app/templates/admin_view.html
+++ b/app/templates/admin_view.html
@@ -15,10 +15,15 @@
         <a href="/users">Użytkownicy</a>
     </div>
     <div class="sidebutton">
-        <a href="/courses">Kursy</a>
+        <a href="/admin/courses/">Kursy</a> 
     </div>
     <div class="sidebutton">
-        <a href="/ygroups">Grupy</a>
+        <a href="/admin/createcourse/">Utwórz kurs</a>
+    </div>
+    
+    
+    <div class="sidebutton">
+        <a href="/admin/creategroup/">Utwórz grupę</a>
     </div>
     <div class="sidebutton">
         <a href="/grades">Content</a>
@@ -27,5 +32,6 @@
 {% block content %}
 <h4>
     THIS IS THE ADMIN CITE 
+
 </h4>
 {% endblock %}
