--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -164,3 +164,7 @@ main .container {
     text-align: center;
     padding: 5px 0 15px 0;
 }
+.addCourse textarea {
+    width: 300px;
+    height: 100px;
+}
