users management on admin cite feature

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
 	<meta charset="utf-8" />
-	<title>Akademia programowania</title>
+	<title>akademia programowania</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css')}}">
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-            <h1 class="title">Akademia programowania</h1>
+            <h1 class="title">akademia programowania</h1>
             <nav class="navbar">
                 {% block nav %}
                 <a class="nav_item" href='login'>Zaloguj</a>
