--- a/app/templates/admin_view.html
+++ b/app/templates/admin_view.html
@@ -12,7 +12,7 @@
 {% endblock %}
 {% block sidebar %}
     <div class="sidebutton">
-        <a href="/users">Użytkownicy</a>
+        <a href="/admin/users_management/">Użytkownicy</a>
     </div>
     <div class="sidebutton">
         <a href="/admin/courses/">Kursy</a> 
