--- a/app/templates/student_view.html
+++ b/app/templates/student_view.html
@@ -15,10 +15,10 @@
         <a href="/news">Aktualności</a>
     </div>
     <div class="sidebutton">
-        <a href="/courses">Kursy</a>
+        <a href="/student/courses">Kursy</a>
     </div>
     <div class="sidebutton">
-        <a href="/groups">Grupy</a>
+        <a href="/groups">Moje grupy</a>
     </div>
     <div class="sidebutton">
         <a href="/grades">Oceny</a>
