--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,9 @@
                 </div>
             </aside>
             <div class="content">
-                {% block content %}{% endblock %}
+                {% block content %}
+                
+                {% endblock %}
             </div>
         </div>
     </main> 
