--- a/app/templates/createcourse.html
+++ b/app/templates/createcourse.html
@@ -3,6 +3,6 @@
 <form class='addCourse' action='/admin/createcourse/' method="POST">
         <label><p>Nazwa kursu:</p> <input type='text' name='name' required></label>
         <label><p>Opis kursu:</p> <textarea maxlength='255' name='description' required></textarea></label>
-        <div><input type='submit' value='Zatwierdź'></div>
+        <div><input class="redButton" type='submit' value='Zatwierdź'></div>
 </form>
 {% endblock %}
