--- a/app/templates/creategroup.html
+++ b/app/templates/creategroup.html
@@ -13,6 +13,6 @@
                     <option value="{{ teacher.userGId }}">{{ teacher.firstName }} {{ teacher.lastName }} </option>
                 {% endfor %} 
         </select>
-        <div><input type='submit' value='Zatwierdź'></div>
+        <div><input class="redButton" type='submit' value='Zatwierdź'></div>
 </form>
 {% endblock %}
