--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -9,6 +9,8 @@
     <label>Email: <input type='email' name='email' required></label>
     <label>Password: <input type='password' name='password' required></label>
     <label><input type="checkbox" required> Akceptuje regulamin</label>
-    <div><input type='submit' value='Submit'></div>
+    <div><input class="redButton" type='submit' value='Submit'></div>
 </form>
+{% endblock%}
+{% block content %} 
 {% endblock%}
