--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,9 +6,10 @@
 <form  action='/login/' method="POST"> 
     <label><p>Email:</p> <input type='text' name='email' required></label>
     <label><p>Hasło:</p> <input type='password' name='pass' required></label>
-    <div><input type='submit' value='Zaloguj'></div>
+    <div><input class="redButton" type='submit' value='Zaloguj'></div>
 </form>
 {% endblock%}
-
+{% block content %} 
+{% endblock%}
           
 
