--- a/app/templates/student_groups.html
+++ b/app/templates/student_groups.html
@@ -1,9 +1,13 @@
 {% extends "student_view.html" %}
 {% block content %}
 {% for group in groups %}
-<p>Grupa numer: {{ group.groupId }}</p>
-<p>Prowadzący: {{ group.teacherId }}</p>
-<a href="{{ '/student/courses/lessons%s'%group.groupId }}">Zobacz terminy zajęć</a>
-<a href="/">Zapisz się</a>
+<div class="group">
+    <div class="groupItem">
+        <div><p>Grupa nr: {{ group.groupId }}</p></div>
+        <div><p>Prowadzący: {{ group.teacherId }}</p></div>
+    </div>
+    <a href="{{ '/student/courses/lessons%s'%group.groupId }}"><button class="redButton">Zobacz terminy zajęć</button></a>
+    <a href="/"><button class="redButton">Zapisz się</button></a>
+</div>
 {% endfor %}
 {% endblock %}
