--- a/app/templates/student_lessons.html
+++ b/app/templates/student_lessons.html
@@ -1,10 +1,11 @@
 {% extends "student_view.html" %}
 {% block content %}
 {% for lesson in lessons %}
+<div class="lesson">
 <h2>Terminy zajęć: </h2>
-<p>{{ lesson.dateValue }}</p>
-<p>{{ lesson.timeValue }}</p>
-<p>{{ lesson.classroom }}</p>
-<br/>
+    <p>{{ lesson.dateValue }}</p>
+    <p>Godzina: {{ lesson.timeValue }}</p>
+    <p>Sala: {{ lesson.classroom }}</p>
+</div>
 {% endfor %}
 {% endblock %}
