--- a/app/templates/users_management.html
+++ b/app/templates/users_management.html
@@ -8,7 +8,7 @@
                 <option value ="add_teacher">Dodaj nauczyciela</option>
                 <option value ="delete_teacher">Usuń nauczyciela</option>
             </select>
-        <div><input  type='submit' value='Zatwierdź'></div>
+        <div><input  type='submit' method='PUT' value='Zatwierdź'></div>
         {% block statement_teacher %}
         {% endblock %}
         <label>Nauczyciele:</label>
