removed p tag from label

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,8 +4,8 @@
 {% endblock %}
 {% block form %}
 <form  action='/login/' method="POST"> 
-    <label><p>Email:</p> <input type='text' name='email' required></label>
-    <label><p>Hasło:</p> <input type='password' name='pass' required></label>
+    <label>Email: <input type='text' name='email' required></label>
+    <label>Hasło: <input type='password' name='pass' required></label>
     <div><input class="redButton" type='submit' value='Zaloguj'></div>
 </form>
 {% endblock%}
