--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,10 +4,10 @@
 {% endblock %}
 {% block form %}
 <form action='/register/' method="POST"> 
-    <label>First name: <input type='text' name='fname' required></label>
-    <label>Last name: <input type='text' name='lname' required></label>
+    <label>Imię: <input type='text' name='fname' required></label>
+    <label>Nazwisko: <input type='text' name='lname' required></label>
     <label>Email: <input type='email' name='email' required></label>
-    <label>Password: <input type='password' name='password' required></label>
+    <label>Hasło: <input type='password' name='password' required></label>
     <label><input type="checkbox" required> Akceptuje regulamin</label>
     <div><input class="redButton" type='submit' value='Submit'></div>
 </form>
