--- a/app/templates/teacher_view.html
+++ b/app/templates/teacher_view.html
@@ -15,6 +15,7 @@
 <a href="/courses">Kursy</a>
 <a href="/groups">Twoje grupy</a>
 <a href="/grades">Obecności</a>
+<a href="/message/">Wyślij wiadomość</a>
     
 {% endblock %}
 {% block content %}
