Message sending and receiving

--- a/app/templates/student_view.html
+++ b/app/templates/student_view.html
@@ -11,7 +11,7 @@
     </nav>
 {% endblock %}
 {% block sidebar %}
-<a href="/news">Aktualności</a>
+<a href="/student/news">Aktualności</a>
 <a href="/student/courses">Kursy</a>
 <a href="/groups">Moje grupy</a>
 <a href="/grades">Oceny</a>
