--- a/app/templates/teacher_create_message.html
+++ b/app/templates/teacher_create_message.html
@@ -7,6 +7,7 @@
         <option value="{{ group.groupId }}">Grupa numer: {{ group.groupId}}</option>
         {% endfor %}
     </select>
+    <label>Tytuł: <input type='text' name='title' required></label>
     <textarea name="message"></textarea>
     <button type="submit" class="redButton">Wyślij</button>
 </form>
