admin create lessons

--- a/app/templates/admin_view.html
+++ b/app/templates/admin_view.html
@@ -15,6 +15,7 @@
     <a href="/admin/courses/">Kursy</a> 
     <a href="/admin/createcourse/">Utwórz kurs</a>
     <a href="/admin/creategroup/">Utwórz grupę</a>
+    <a href="/admin/createlessons/">Utwórz lekcje</a>
     <a href="/grades">Content</a>
 {% endblock %}
 {% block content %}
