--- a/app/templates/student_view.html
+++ b/app/templates/student_view.html
@@ -15,7 +15,8 @@
 <a href="/student/courses">Kursy</a>
 <a href="/groups">Moje grupy</a>
 <a href="/grades">Oceny</a>
-    
+<a href="/student/plan/0">Plan zajęć</a>
+
 {% endblock %}
 {% block content %}
 <h2>
