--- a/app/templates/teacher_view.html
+++ b/app/templates/teacher_view.html
@@ -13,8 +13,8 @@
 {% block sidebar %}
 <a href="/news">Aktualności</a>
 <a href="/courses">Kursy</a>
-<a href="/groups">Twoje grupy</a>
-<a href="/grades">Obecności</a>
+<a href="/teacher/groups">Twoje grupy</a>
+<a href="/attendances">Obecności</a>
 <a href="/message/">Wyślij wiadomość</a>
     
 {% endblock %}
