--- a/app/templates/admin_lessons_created.html
+++ b/app/templates/admin_lessons_created.html
@@ -1,4 +1,7 @@
 {% extends "admin_view.html" %}
 {% block content %}
-<p>Lekcje zostały utworzone</p>
+<div class='message'>
+    <p>Lekcje zostały utworzone</p>
+</div>
+
 {% endblock %}
