--- a/app/templates/student_added_to_group.html
+++ b/app/templates/student_added_to_group.html
@@ -1,4 +1,6 @@
 {% extends "student_view.html" %}
 {% block content %}
-<p>Zostałeś dodany do grupy</p>
+<div class="message">
+<p>Wysłano prośbę o dodanie do grupy</p>
+</div>
 {% endblock %}
