--- a/app/templates/student_view.html
+++ b/app/templates/student_view.html
@@ -11,16 +11,13 @@
     </nav>
 {% endblock %}
 {% block sidebar %}
-<a href="/student/news">Aktualności</a>
-<a href="/student/courses">Kursy</a>
-<a href="/groups">Moje grupy</a>
-<a href="/grades">Oceny</a>
-<a href="/student/plan/0">Plan zajęć</a>
+<a class='nav_item' href="/student/news">Aktualności</a>
+<a class='nav_item' href="/student/courses">Kursy</a>
+<a class='nav_item' href="/student/groups">Moje grupy</a>
+<a class='nav_item' href="/student/grades">Oceny</a>
+<a class='nav_item' href="/student/plan/0">Plan zajęć</a>
 
 {% endblock %}
 {% block content %}
-<h2>
-"A bug is never just a mistake. It represents something bigger. An error of thinking. That makes You who You are."
-Elliot Alderson
-</h2>
+
 {% endblock %}
